Adding ApiResponse to help with error handling