@@ -3,7 +3,7 @@ package com.fishingLog.spring.utils;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -19,7 +19,16 @@ public class WeatherConverterTest {
     @Test
     public void weatherConverterTest() throws IOException {
         StormGlassApiService stormGlassApiService = mock(StormGlassApiService.class);
-        when(stormGlassApiService.obtainData()).thenReturn(Collections.singletonList(response.getDataString()));
+        Map<String, List<String>> headers = Map.of(
+                "access-control-allow-origin", List.of("*"),
+                "content-length", List.of("1223"),
+                "content-type", List.of("application/json"),
+                "date", List.of("Mon, 04 Nov 2024 02:03:08 GMT"),
+                "server", List.of("gunicorn"),
+                "vary", List.of("Accept-Encoding")
+        );
+        ApiResponse weatherResponse = new ApiResponse(200, headers, response.getDataString());
+        when(stormGlassApiService.obtainData()).thenReturn((List.of(weatherResponse)));
 
         actualResponse = stormGlassWeatherConverter.dataConverter(response.getWeatherDataString());
         expectedResponse = response.getWeatherMapTest();
